VA-1010 Fix text-align in redesign

--- a/styles/single-choice-set.css
+++ b/styles/single-choice-set.css
@@ -78,8 +78,6 @@ ul.h5p-sc-alternatives li.h5p-sc-alternative {
   overflow: hidden;
   transition: -webkit-transform 0.5s ease-in-out, width 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out, width 0.5s ease-in-out;
-  display: flex;
-  align-items: center;
   padding: var(--h5p-theme-spacing-xs) var(--h5p-theme-spacing-s);
   margin: var(--h5p-theme-spacing-xxs) 0;
   background: var(--h5p-theme-alternative-base);
